package com.gestaopagamentos.models;

public class BankAccount {
    private Long id;
    private String name;
    private String color;
}
