package com.gestaopagamentos.services;

import com.gestaopagamentos.models.BankAccount;

public class BankAccountService {
    public void registerBankAccount(BankAccount bankAccount){

    }

    public void getBankAccount(Long id){

    }

    public void getMostUsedBankAccount(){

    }

    public void getAllBanksAccounts(){

    }

    public void updateBankAccount(Long id, BankAccount bankAccount){

    }

    public void deleteBankAccount(Long id){

    }
}
