package com.gestaopagamentos.services;

import com.gestaopagamentos.models.FinancePlanning;

public class FinancePlanningService {
    public void registerFinancePlanning(FinancePlanning financePlanning){

    }

    public void getFinancePlanning(Long id){

    }

    public void getAllFinancePlannings(){

    }

    public void updateFinancePlanning(Long id, FinancePlanning financePlanning){

    }

    public void deleteFinancePlanning(Long id){

    }

    public void differenceBetweenCurrentExpenseAndGoalAmount(){

    }

    private void userDontReachGoalAmountInMonth(){

    }

    private void checkDifficultyLevelOfEconomicGoal(){

    }

    private void userExceedsMonthlyGoalAmount(){

    }
}
