package com.gestaopagamentos.services;

import com.gestaopagamentos.models.Transaction;
import com.gestaopagamentos.models.TransactionLog;

public class TransactionService {
    private void convertImgDataToTransaction(){

    }
    private void convertPdfToTransaction(){

    }

    private void registerTransaction(Transaction transaction){

    }
    /*private void registerTransaction(String imgData){

    }
    private void registerTransaction(String pdfData){

    }*/

    private void getTransaction(Long id){

    }
    private void getLatest20Transactions(){

    }
    private void updateTransaction(Long id, Transaction transaction){

    }
    private void deleteTransaction(Long id){

    }

    private void createTransactionLog(TransactionLog transactionLog){

    }

    public void getTransactionLog(){

    }

    private void updateTransactionLog(){

    }
    private void deleteTransactionLog(){

    }
}
